--- a/boston_housing.ipynb
+++ b/boston_housing.ipynb
@@ -599,7 +599,7 @@
     "\n",
     "In k-fold cross-validation, the original sample is randomly partitioned into k equal sized subsamples. Of the k subsamples, a single subsample is retained as the validation data for testing the model, and the remaining k − 1 subsamples are used as training data. The cross-validation process is then repeated k times (the folds), with each of the k subsamples used exactly once as the validation data. The k results from the folds can then be averaged to produce a single estimation.\n",
     "\n",
-    "The advantage of this method over repeated random sub-sampling is that all observations are used for both training and validation, and each observation is used for validation exactly once."
+    "The advantage of this method over repeated random sub-sampling is that all observations are used for both training and validation, and each observation is used for validation exactly once. Under k-fold cross-validation, there is less worries about how data is divided, and the variance will decrease as k increases. If only one training/test data is used for parameter tuning, risk of high variance might happen to affect accuracy of the model."
    ]
   },
   {
